--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "jquery": "^3.1.1",
+    "leaflet": "^1.0.2",
+    "lodash": "^4.17.2",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-leaflet": "^1.0.0-rc.3"
   },
   "scripts": {
     "start": "react-scripts start",
